# Ideal_Ride

./: .gitignore  CMakeLists.txt  README.md  generate_random.py  parse.py
src/: Graph.cpp  Graph.h  MST.h  kruskal.h  main.cpp  prim.h
